[package]
name = "colissimo_track"
version = "0.1.0"
authors = ["Edgar Onghena"]
edition = "2018"
description = "An unofficial API client for Colissimo, a parcel delivery service"
readme = "README.md"
repository = "https://github.com/edgarogh/colissimo_track"
license = "MIT"
keywords = [ "parcel", "colissimo", "api" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.11"
hyper = "0.13.6"
hyper-tls = "0.4.1"
serde = { version = "1.0.111", features = [ "derive" ] }
serde_json = "1.0.53"

[dev-dependencies]
tokio = { version = "0.2", features = [ "full", "macros" ] }
