[package]
name = "colissimo_track"
version = "0.1.1"
authors = ["Edgar Onghena"]
edition = "2021"
description = "An unofficial API client for Colissimo, a parcel delivery service"
readme = "README.md"
repository = "https://github.com/edgarogh/colissimo_track"
license = "MIT"
keywords = [ "parcel", "colissimo", "api" ]
exclude = [
    ".idea/",
    "colissimo_track.iml",
]

[dependencies]
chrono = "0.4.16"
hyper = { version = "0.14.20", default-features = false, features = ["client", "http1", "http2"] }
hyper-tls = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.21", features = ["full", "macros"] }
